--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,12 +1,37 @@
-{% extends "base.html" %}
+{% load static %}
 
-{% block title %}Login{% endblock %}
+<head>
+    <title>Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="{% static 'accounts/css/login.css' %}">
+</head>
 
 {% block content %}
-<h2>Login</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-</form>
+<div class="login-container">
+    <h2>User Login</h2>
+
+    <form method="post">
+        {% csrf_token %}
+
+        <div class="input-icon">
+            <i class="fas fa-user"></i>
+            {{ form.username }}
+        </div>
+
+        <div class="input-icon">
+            <i class="fas fa-lock"></i>
+            {{ form.password }}
+        </div>
+
+        <a class="forgot-password" href="#">Forgot Password?</a>
+
+        <button type="submit">Login</button>
+    </form>
+</div>
 {% endblock %}
