--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 <body> 
     <header>
-        <a href="#" class="home">Home</a>
+        <a href="{% url 'landlord_dashboard' %}" class="home">Home</a>
 
         {% if user.is_authenticated %}
         <form action="{% url 'logout' %}" method="post" style="display: inline;">
