added edit_unit logic

--- a/static/properties/css/unit_list.css
+++ b/static/properties/css/unit_list.css
@@ -153,6 +153,10 @@
         background-color: var(--primary);
     }
 
+    .btn-edit {
+        background-color: var(--secondary);
+    }
+
     .btn-records:hover {
         background-color: #1e40af;
     }
