--- a/templates/properties/unit_list.html
+++ b/templates/properties/unit_list.html
@@ -50,6 +50,10 @@
             </div>
 
             <div class="unit-actions">
+                <a href="{% url 'unit_edit' unit.id %}"
+                       class="btn btn-edit">
+                        Edit Unit
+                    </a>
 
                 {% if unit.is_occupied and unit.active_tenancy %}
                     <a href="{% url 'rent_record_list' unit.active_tenancy.id %}"
