--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,19 @@
         {% endif %}
     </header>
 
+    {% if messages %}
+    <div class="messages-container">
+        {% for message in messages %}
+        <div class="alert alert-success">
+            <span class="alert-text">{{ message }}</span>
+            <button class="alert-close" onclick="this.parentElement.remove()">
+                &times;
+            </button>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
     <div class="container">
         {% block content %}
         {% endblock %}
